--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,14 +2,17 @@
 <header class='top-page-header'>
   <div class='nav'>
     <ul class='lists-left'>
-      <li>shitsumon</li>
-      <li>新規質問</li>
+      <li><%= link_to 'SHITSMON', root_path, method: :delete, class: "logo" %></li>
+      <li><%= link_to '新規質問', destroy_user_session_path, method: :delete, class: "logo" %></li>
     </ul>
     <ul class='lists-right'>
-      <li><%#= link_to current_user.nickname, "#", class: "user-nickname" %> </li>
-      <li><%#= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
-      <li><%= link_to 'ログイン', '#', class: "login" %></li>
-      <li><%= link_to '新規登録', '#', class: "sign-up" %></li>
+    <% if user_signed_in? %>
+      <li><%= link_to current_user.user_name, "#", class: "user-nickname" %> </li>
+      <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
+    <% else %>
+      <li><%= link_to 'ログイン', user_session_path, class: "login" %></li>
+      <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
+    <% end %>
     </ul>
   </div>
 </header>
