投稿の編集・削除の実装

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <%= render "shared/header" %>
 <div class="items-sell-main">
-  <h2 class="items-sell-title">質問を入力</h2>
+  <h2 class="items-sell-title">質問内容の変更</h2>
   <%= form_with(model: @post, local: true) do |f| %>
 
     <%= render 'shared/error_messages', model: f.object %>
