--- a/app/assets/stylesheets/posts/show.css
+++ b/app/assets/stylesheets/posts/show.css
@@ -1,5 +1,4 @@
 .item-show{
-  overflow: scroll;
   height: 100vh;
 }
 
@@ -14,7 +13,7 @@
 
 .item-img-content{
   text-align: center;
-  margin: 20px;
+  margin-top: 40px;
 }
 
 .item-explain-box{
@@ -22,6 +21,20 @@
   margin-top: 20px;
   margin-left: 300px;
   margin-right: 300px;
+  margin-bottom: 30px;
   text-align: center;
+  font-size: 20px;
+}
+
+.item-red-btn{
+  margin-top: 20px;
+}
+
+.or-text{
+  text-align: center;
+}
+.dc{
+  text-align: center;
+  margin-top: 30px;
   font-size: 20px;
 }
