--- a/app/assets/stylesheets/posts/show.css
+++ b/app/assets/stylesheets/posts/show.css
@@ -38,3 +38,30 @@
   margin-top: 30px;
   font-size: 20px;
 }
+
+.field{
+  text-align: center;
+  padding: 20px;
+}
+
+.actions{
+  text-align: center;
+}
+
+.form__btn{
+  margin-top: 30px;
+  margin-bottom: 30px;
+  padding: 10px;
+  border: solid red;
+}
+
+.comments_list{
+  text-align: center;
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+.itiran{
+  text-align: center;
+  font-size: 25px;
+}
