--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,7 +7,7 @@
       <%= @post.title %>
     </h2>
 
-  <% if user_signed_in? || current_user.id == @post.user_id %>
+  <% if user_signed_in? && current_user.id == @post.user_id %>
   <div class="dc">
     <%= link_to "質問の編集", edit_post_path, method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
@@ -25,5 +25,30 @@
     <div class="item-explain-box">
       <span><%= @post.text %></span>
     </div>
+  </div>
+  <div class="prototype__comments">
+        <%# ログインしているユーザーには以下のコメント投稿フォームを表示する %>
+    <% if user_signed_in? %>
+      <%= form_with(model: [@post, @comment], local: true) do |f|%>
+         <div class="field">
+            <%= f.label :comments, "コメント" %><br />
+            <%= f.text_field :text %>
+          </div>
+          <div class="actions">
+            <%= f.submit "送信する", class: :form__btn  %>
+          </div>
+      <% end %>
+    <% end %> 
+    <ul class="comments_lists">
+      <li class="itiran">コメント一覧</li>
+    <% @comments.each do |comment| %>
+      <li class="comments_list">
+        <%= comment.text %>
+      </li>
+      <li class="comments_list">
+        投稿者  <%= comment.user.user_name %>
+      </li>
+    <% end %>
+    </ul>
   </div>
 </div>
