--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,9 +9,9 @@
 
   <% if user_signed_in? && current_user.id == @post.user_id %>
   <div class="dc">
-    <%= link_to "質問の編集", edit_post_path, method: :get, class: "item-red-btn" %>
+    <%= link_to "質問の編集", edit_post_path(@post.id), method: :get, class: "item-red-btn" %>
     <p class="or-text">or</p>
-    <%= link_to "質問の削除", post_path, method: :delete, class:"item-destroy" %>
+    <%= link_to "質問の削除", post_path(@post.id), method: :delete, class:"item-destroy" %>
   </div>
   <% end %>
 
@@ -27,7 +27,7 @@
     </div>
   </div>
   <div class="prototype__comments">
-        <%# ログインしているユーザーには以下のコメント投稿フォームを表示する %>
+
     <% if user_signed_in? %>
       <%= form_with(model: [@post, @comment], local: true) do |f|%>
          <div class="field">
