--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,9 @@
 <%= render "shared/header" %>
 
 <div class='main'>
+  <div class="image-tag">
+    <%= image_tag "top-title-mobile.png", class:"list-pict" %>
+  </div>
   <div class='item-contents'>
     <h2 class='sintaku'>新着質問</h2>
     <ul class='item-lists'>
