--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,9 @@
 <%= render "shared/header" %>
 
-<%# 商品の概要 %>
 <div class="item-show">
   <div class="item-box">
-    <h2 class="name">
+    <h2 class="name">質問題名</h2>
+    <h2 class="names">
       <%= @post.title %>
     </h2>
 
